fix h1 line height when on smaller screens

--- a/styles/style.css
+++ b/styles/style.css
@@ -40,13 +40,21 @@ div.row-fluid.technical ul{
   list-style: none;
   margin-left: 0px;
 }
+.contact_info p{
+  margin: 0px;
+}
+@media (max-width: 767px){
+  .row-fluid h1{
+    line-height: 36px;
+  }
+}
 h1{
     /*color: #CCCCCC;*/
     /*text-shadow: 0px 2px 0px #000;*/
     font-size: 48px;
     font-family: 'LeagueGothicRegular',arial, sans-serif;
     font-weight: 500;
-    padding: 24px 0px;
+    padding: 0px 0px;
 }
 h2{
     /*color: #CCCCCC;*/
